// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TsCompiler getCompiledOutput isolatedModules true should transpile code with config {"babelConfig": false, "module": "CommonJS", "supportsStaticESM": false, "useESM": true} 1`] = `
{
  "allowSyntheticDefaultImports": undefined,
  "customConditions": undefined,
  "esModuleInterop": true,
  "module": 1,
}
`;

exports[`TsCompiler getCompiledOutput isolatedModules true should transpile code with config {"babelConfig": false, "module": "CommonJS", "supportsStaticESM": true, "useESM": false} 1`] = `
{
  "allowSyntheticDefaultImports": undefined,
  "customConditions": undefined,
  "esModuleInterop": true,
  "module": 1,
}
`;

exports[`TsCompiler getCompiledOutput isolatedModules true should transpile code with config {"babelConfig": false, "module": "ESNext", "supportsStaticESM": true, "useESM": true} 1`] = `
{
  "allowSyntheticDefaultImports": undefined,
  "customConditions": undefined,
  "esModuleInterop": true,
  "module": 99,
}
`;

exports[`TsCompiler getCompiledOutput isolatedModules true should transpile code with config {"babelConfig": true, "module": "CommonJS", "supportsStaticESM": false, "useESM": true} 1`] = `
{
  "allowSyntheticDefaultImports": undefined,
  "customConditions": undefined,
  "esModuleInterop": true,
  "module": 1,
}
`;
